--- a/test/test_nn_d/1.ipynb
+++ b/test/test_nn_d/1.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'HPO' from 'mindware' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      5\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/mindware/mindware\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmindware\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HPO\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmindware\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_manager\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataManager\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'HPO' from 'mindware' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append('D:/mindware')\n",
+    "sys.path.append(os.path.abspath('/home/mindware/mindware'))\n",
     "from mindware import HPO\n",
     "from mindware.utils.data_manager import DataManager\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -54,7 +66,7 @@
    "source": [
     "data_dir_1 = 'D:/kaggle_data/automl_data/cls_datasets'\n",
     "\n",
-    "data = pd.read_csv(data_dir_1+'/sick.csv')\n",
+    "data = pd.read_csv(data_dir_1+'/spambase.csv')\n",
     "train_data, test_data =train_test_split(data, train_size=0.7,random_state=42)\n",
     "y_test = test_data.iloc[:,-1].values\n",
     "#y_test = np.where(y_test == 'P',1,0)\n",
@@ -1100,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
